# warc-analytics-agent

./: .env.example  package-lock.json
.github/workflows/: docker.yml  pr-preview.yml  publish.yml
apps/backend/: package.json
apps/backend/fastapi/: main.py
apps/backend/migrations-postgres/meta/: _journal.json
apps/backend/migrations-sqlite/meta/: _journal.json
apps/backend/src/: app.ts  env.ts
apps/backend/src/agents/: provider-meta.ts  providers.ts
apps/backend/src/agents/compaction/: compaction-llm.ts
apps/backend/src/db/: abstractSchema.ts  pg-schema.ts  sqlite-schema.ts
apps/backend/src/handlers/: agent.ts
apps/backend/src/queries/: chat.queries.ts  image.queries.ts  organization.queries.ts
apps/backend/src/routes/: image.ts
apps/backend/src/services/: agent.ts  github.ts  mcp.service.ts  token-counter.ts  whatsapp.ts
apps/backend/src/types/: chat.ts  llm.ts  mcp.ts
apps/backend/src/utils/: chat-message-part-mappings.ts  image.ts
apps/frontend/: index.html  vite.config.ts
apps/frontend/src/components/: chat-input-image-preview.tsx  chat-input.tsx  command-menu.tsx  image-lightbox.tsx
apps/frontend/src/components/chat-messages/: user-message.tsx
apps/frontend/src/components/settings/: chats-replay-panel.tsx  llm-provider-card.tsx  llm-provider-form.tsx  usage-filters.tsx
apps/frontend/src/components/side-panel/: story-header.tsx  story-table-embed.tsx  story-viewer.tsx
apps/frontend/src/components/tool-calls/: display-chart.tsx  story.tsx
apps/frontend/src/hooks/: use-agent.ts  use-image-upload.ts  use-side-panel.ts
apps/frontend/src/lib/: ai.ts
apps/frontend/src/routes/: _sidebar-layout._chat-layout.$chatId.tsx  _sidebar-layout.settings.project.index.tsx  _sidebar-layout.settings.project.telegram.tsx  _sidebar-layout.settings.project.whatsapp.tsx  _sidebar-layout.shared-chat.$shareId.tsx  _sidebar-layout.stories.shared.$shareId.tsx
apps/frontend/src/types/: ai.ts  chat-message-queue.ts
apps/shared/src/: chart-builder.tsx
cli/: pyproject.toml
cli/nao_core/: version.py
cli/nao_core/commands/: chat.py  debug.py
cli/nao_core/config/databases/: __init__.py  base.py  bigquery.py  fabric.py
cli/nao_core/config/llm/: __init__.py
cli/nao_core/templates/: engine.py  render.py
cli/tests/nao_core/config/: test_fabric.py
cli/tests/nao_core/templates/: test_engine.py  test_render.py
(+6 files in other folders)
